--- a/Frontend/skills.html
+++ b/Frontend/skills.html
@@ -8,25 +8,28 @@
                     <div class="skill-group">
                         <h3>Frontend</h3>
                         <ul>
-                            <li>HTML5</li>
-                            <li>CSS3 (Flexbox, Grid)</li>
-                            <li>JavaScript (ES6+)</li>
+                            <li><i class="fa-brands fa-html5" title="HTML5"></i></li>
+                            <li><i class="fa-brands fa-css3-alt" title="CSS3"></i></li>
+                            <li><i class="fa-brands fa-js" title="JavaScript"></i></li>
                         </ul>
                     </div>
                     <div class="skill-group">
                         <h3>Backend</h3>
                         <ul>
-                            <li>Node.js</li>
-                            <li>Express</li>
-                            <li>REST APIs</li>
+                            <li><i class="fa-brands fa-node-js" title="Node.js"></i></li>
+                            <li><i class="fa-solid fa-server" title="Express.js"></i></li>
+                            <li><i class="fa-solid fa-diagram-project" title="REST APIs"></i></li>
                         </ul>
                     </div>
                     <div class="skill-group">
                         <h3>Tools & Others</h3>
-                        <ul>
-                            <li>Git & GitHub</li>
-                            <li>VS Code</li>
-                            <li>Responsive Design</li>
+                        <ul>    
+                            <li>
+                                <i class="fa-brands fa-git-alt" title="Git"></i>
+                                <i class="fa-brands fa-github" title="GitHub"></i>
+                            </li>
+                            <li><i class="fa-solid fa-code" title="VS Code"></i></li>
+                            <li><i class="fa-solid fa-mobile-screen-button" title="Responsive Design"></i></li>
                         </ul>
                     </div>
                 </div>
