--- a/Frontend/skills.html
+++ b/Frontend/skills.html
@@ -6,30 +6,70 @@
                 </div>
                 <div class="skills-grid">
                     <div class="skill-group">
-                        <h3>Frontend</h3>
+                        <h3>Frontend / Languages</h3>
                         <ul>
-                            <li><i class="fa-brands fa-html5" title="HTML5"></i></li>
-                            <li><i class="fa-brands fa-css3-alt" title="CSS3"></i></li>
-                            <li><i class="fa-brands fa-js" title="JavaScript"></i></li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5 logo" class="skill-icon" />
+                                <span>HTML5</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3 logo" class="skill-icon" />
+                                <span>CSS3</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript logo" class="skill-icon" />
+                                <span>JavaScript</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" alt="C logo" class="skill-icon" />
+                                <span>C</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java logo" class="skill-icon" />
+                                <span>Java</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python logo" class="skill-icon" />
+                                <span>Python</span>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-group">
                         <h3>Backend</h3>
                         <ul>
-                            <li><i class="fa-brands fa-node-js" title="Node.js"></i></li>
-                            <li><i class="fa-solid fa-server" title="Express.js"></i></li>
-                            <li><i class="fa-solid fa-diagram-project" title="REST APIs"></i></li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js logo" class="skill-icon" />
+                                <span>Node.js</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express logo" class="skill-icon" />
+                                <span>Express</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/socketio/socketio-original.svg" alt="API logo" class="skill-icon" />
+                                <span>REST APIs</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB logo" class="skill-icon" />
+                                <span>MongoDB</span>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-group">
-                        <h3>Tools & Others</h3>
-                        <ul>    
+                        <h3>Tools, Others & Database</h3>
+                        <ul>
                             <li>
-                                <i class="fa-brands fa-git-alt" title="Git"></i>
-                                <i class="fa-brands fa-github" title="GitHub"></i>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git logo" class="skill-icon" />
+                                <span>Git</span>
                             </li>
-                            <li><i class="fa-solid fa-code" title="VS Code"></i></li>
-                            <li><i class="fa-solid fa-mobile-screen-button" title="Responsive Design"></i></li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub logo" class="skill-icon" />
+                                <span>GitHub</span>
+                            </li>
+                            <li>
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code logo" class="skill-icon" />
+                                <span>VS Code</span>
+                            </li>
                         </ul>
                     </div>
                 </div>
