--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -6,12 +6,8 @@
                 </div>
                 <div class="contact-grid">
                     <div>
-                        <p>
-                            If you’d like to talk about a role, collaboration, or
-                            project idea, feel free to reach out.
-                        </p>
                         <ul class="contact-list">
-                            <li><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></li>
+                            <li><strong>Email:</strong> <a href="mailto:mukeshharisk90@gmail.com">mukeshharisk90@gmail.com</a></li>
                             <li><strong>GitHub:</strong> <a href="#" target="_blank" rel="noopener">github.com/your-username</a></li>
                             <li><strong>LinkedIn:</strong> <a href="#" target="_blank" rel="noopener">linkedin.com/in/your-profile</a></li>
                         </ul>
