--- a/Frontend/experience.html
+++ b/Frontend/experience.html
@@ -1,23 +1,27 @@
             <!-- Experience Section -->
             <section id="experience" class="section section-alt">
                 <div class="section-header">
-                    <h2>Experience & Education</h2>
-                    <p>My background and what I’ve been working on.</p>
+                    <h2>Education & Certifications</h2>
                 </div>
                 <div class="timeline">
                     <div class="timeline-item">
-                        <h3>Role or Position</h3>
-                        <span class="timeline-meta">Organization · Year – Year</span>
+                        <h3>Education</h3>
                         <ul>
-                            <li>Brief point about what you did and achieved.</li>
-                            <li>Highlight technologies or responsibilities.</li>
+                            <li>VIDYA NETHRRA MATRIC HIGHER SECONDARY SCHOOL</li>
                         </ul>
+                        <span class="timeline-meta">HSC - 79%</span>
+                        <ul>
+                            <li>KONGU ENGINEERING COLLEGE</li>
+                        </ul>
+                        <span class="timeline-meta">BTech-AI&DS - 7.86*</span>
+
                     </div>
                     <div class="timeline-item">
-                        <h3>Education</h3>
-                        <span class="timeline-meta">Degree / Course · Year – Year</span>
+                        <h3>Certifications</h3>
                         <ul>
-                            <li>Short summary of what you studied or focused on.</li>
+                            <li>MongoDB Associate Developer</li>
+                            <li>Java Foundation</li>
+                            <li>Oracle Apex Developer</li>
                         </ul>
                     </div>
                 </div>
