--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -6,10 +6,9 @@
                 </div>
                 <div class="contact-grid">
                     <div>
-                        <ul class="contact-list">
-                            <li><strong>Email:</strong> <a href="mailto:mukeshharisk90@gmail.com">mukeshharisk90@gmail.com</a></li>
-                            <li><strong>GitHub:</strong> <a href="#" target="_blank" rel="noopener">github.com/your-username</a></li>
-                            <li><strong>LinkedIn:</strong> <a href="#" target="_blank" rel="noopener">linkedin.com/in/your-profile</a></li>
+                        <ul class="contact-list">                           
+                            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/mukesh-hari-s-67709531a/" target="_blank" rel="noopener">linkedin.com/in/mukesh-hari-s-67709531a/</a></li>
+                            <li><strong>GitHub:</strong> <a href="https://github.com/Mukeshhari-s" target="_blank" rel="noopener">github.com/Mukeshhari-s</a></li>
                         </ul>
                     </div>
                     <form class="contact-form">
