--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -55,6 +55,7 @@
             <div data-include="experience.html"></div>
             <div data-include="contact.html"></div>
         </main>
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
