--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -11,13 +11,16 @@
                     <div class="hero-cta">
                         <a href="#projects" class="btn primary">View Projects</a>
                         <a href="#contact" class="btn secondary">Contact Me</a>
+                        <a href="resume.pdf" download class="btn resume-btn">
+                            <i class="fa-solid fa-download"></i> Resume
+                        </a>
                     </div>
                 </div>
                 <div class="hero-image" aria-hidden="true">
                     <img src="normal_photo.jpg" alt="Mukesh Hari" class="hero-photo">
                 </div>
             </section>
-            <section id="about" class="section">
+            <section id="about" class="section"> 
                 <div class="section-header">
                     <h2>About Me</h2>
                     <p>Who I am and what I love to build.</p>
@@ -37,7 +40,7 @@
                     </div>
                     <ul class="about-highlights">
                         <li>Comfortable with HTML, CSS, and JavaScript</li>
-                        <li>Interested in full-stack web development</li>
+                        <li>Interested in machine learning development</li>
                         <li>Enjoy learning by building real projects</li>
                     </ul>
                 </div>
