--- a/Frontend/experience.html
+++ b/Frontend/experience.html
@@ -3,26 +3,56 @@
                 <div class="section-header">
                     <h2>Education & Certifications</h2>
                 </div>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <h3>Education</h3>
-                        <ul>
-                            <li>VIDYA NETHRRA MATRIC HIGHER SECONDARY SCHOOL</li>
-                        </ul>
-                        <span class="timeline-meta">HSC - 79%</span>
-                        <ul>
-                            <li>KONGU ENGINEERING COLLEGE</li>
-                        </ul>
-                        <span class="timeline-meta">BTech-AI&DS - 7.86*</span>
-
+                
+                <!-- Interactive Timeline -->
+                <div class="timeline-interactive">
+                    <div class="timeline-item-interactive" data-expanded="false">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-header">
+                                <h3><i class="fa-solid fa-graduation-cap"></i> Education</h3>
+                                <span class="timeline-toggle"><i class="fa-solid fa-chevron-down"></i></span>
+                            </div>
+                            <div class="timeline-details">
+                                <div class="education-card">
+                                    <h4>VIDYA NETHRRA MATRIC HIGHER SECONDARY SCHOOL</h4>
+                                    <span class="timeline-meta"><i class="fa-solid fa-calendar"></i> HSC</span>
+                                    <span class="timeline-score"><i class="fa-solid fa-star"></i> 79%</span>
+                                </div>
+                                <div class="education-card">
+                                    <h4>KONGU ENGINEERING COLLEGE</h4>
+                                    <span class="timeline-meta"><i class="fa-solid fa-calendar"></i> BTech - AI & DS</span>
+                                    <span class="timeline-score"><i class="fa-solid fa-star"></i> CGPA: 7.86*</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="timeline-item">
-                        <h3>Certifications</h3>
-                        <ul>
-                            <li>MongoDB Associate Developer</li>
-                            <li>Java Foundation</li>
-                            <li>Oracle Apex Developer</li>
-                        </ul>
+                </div>
+
+                <!-- Achievements/Badges Section -->
+                <div class="section-header" style="margin-top: 3rem;">
+                    <h2><i class="fa-solid fa-award"></i> Certifications & Achievements</h2>
+                </div>
+                <div class="badges-grid">
+                    <div class="badge-card">
+                        <div class="badge-icon mongodb">
+                            <i class="fa-solid fa-database"></i>
+                        </div>
+                        <div class="badge-content">
+                            <h4>MongoDB Associate Developer</h4>
+                            <p>Database Development & NoSQL</p>
+                        </div>
+                        <div class="badge-ribbon"></div>
+                    </div>
+                    <div class="badge-card">
+                        <div class="badge-icon oracle">
+                            <i class="fa-solid fa-code"></i>
+                        </div>
+                        <div class="badge-content">
+                            <h4>Oracle Apex Developer</h4>
+                            <p>Low-Code Application Development</p>
+                        </div>
+                        <div class="badge-ribbon"></div>
                     </div>
                 </div>
             </section>
