--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -33,6 +33,9 @@
                     <div class="avatar-placeholder">MH</div>
                 </div>
                 <div class="nav-social">
+                    <button class="theme-toggle" aria-label="Toggle theme">
+                        <i class="fa-solid fa-lightbulb"></i>
+                    </button>
                     <a href="https://github.com/Mukeshhari-s" target="_blank" rel="noopener" aria-label="GitHub">
                         <i class="fa-brands fa-github"></i>
                     </a>
@@ -55,6 +58,10 @@
             <div data-include="experience.html"></div>
             <div data-include="contact.html"></div>
         </main>
+        <!-- Back to Top Button -->
+        <button class="back-to-top" aria-label="Back to top">
+            <i class="fa-solid fa-arrow-up"></i>
+        </button>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script src="script.js"></script>
     </body>
